--- a/images/prometheus/prometheus.yml
+++ b/images/prometheus/prometheus.yml
@@ -8,13 +8,12 @@ global:
 alerting:
   alertmanagers:
     - static_configs:
-        - targets:
-          # - alertmanager:9093
+        - targets: ['default.test:9093']
 
 # Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
 rule_files:
   - "con.yml"
-  # - "second_rules.yml"
+  - ./alertmanager/alert.rules
 
 # A scrape configuration containing exactly one endpoint to scrape:
 # Here it's Prometheus itself.
