--- a/hosts/default.conf
+++ b/hosts/default.conf
@@ -6,7 +6,7 @@ server {
     root /var/www/default.test;
 
 location / {
-    proxy_pass http://myApp:5000/;
+    proxy_pass http://my-app:5000/;
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Real-IP $remote_addr;
