--- a/images/prometheus/prometheus.yml
+++ b/images/prometheus/prometheus.yml
@@ -33,4 +33,4 @@ scrape_configs:
 
   - job_name: "flask-exporter"
     static_configs:
-      - targets: ["myapp:5000"]
+      - targets: ["my-app:5000"]
