--- a/images/prometheus/prometheus.yml
+++ b/images/prometheus/prometheus.yml
@@ -8,7 +8,7 @@ global:
 alerting:
   alertmanagers:
     - static_configs:
-        - targets: ['default.test:9093']
+        - targets: ['alertmanager:9093']
 
 # Load rules once and periodically evaluate them according to the global 'evaluation_interval'.
 rule_files:
